# mongolite

./: README.md  pyproject.toml
.github/workflows/: main.yml  python-app.yml  test.yml
mongolite/: __init__.py  client.py  collection.py  command.py  database.py
mongolite/backend/: consts.py  document.py  exceptions.py  session.py  storage_engine.py  utils.py
pymongolite/: client.py  collection.py  command.py  database.py  exceptions.py
pymongolite/backend/: document.py  exceptions.py  objectid.py  read_instructions.py  session.py  utils.py
pymongolite/backend/execution_engine/: base_engine.py  chunked_engine.py  cursor.py  exceptions.py  utils.py
pymongolite/backend/indexing_engine/: base_engine.py  base_index.py  index_metadata.py  v1_engine.py
pymongolite/backend/indexing_engine/index_types/: sorted_list_basic_index.py
pymongolite/backend/storage_engine/: base_engine.py  files_engine.py  insert_instruction.py  read_instructions.py  update_instructions.py
tests/: test_benchmark.py  test_client.py  test_collection.py  test_database.py  test_indexes.py  test_matching_util.py  test_update_util.py
