[tool.poetry]
name = "pymongolite"
version = "0.1.3"
description = ""
readme = "README.md"
authors = ["yehoyada <yehoyada.sht@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
blist = "^1.3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
pytest-benchmark = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
