[tool.poetry]
name = "pymongolite"
version = "0.1.7"
description = ""
readme = "README.md"
authors = ["yehoyada <yehoyada.sht@gmail.com>"]
homepage = "https://github.com/hvuhsg/mongolite"
repository = "https://github.com/hvuhsg/mongolite"
keywords = ["mongo", "python", "lite", "local", "simple", "pymongo", "NoSQL", "db", "database"]

[tool.poetry.dependencies]
python = "^3.8"
sortedcontainers = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
pytest-benchmark = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
